Removed commented section

--- a/.github/workflows/MACOSmainbuild.yml
+++ b/.github/workflows/MACOSmainbuild.yml
@@ -21,9 +21,9 @@ jobs:
         cache: gradle
     - name: Validate Gradle wrapper
       uses: gradle/wrapper-validation-action@e6e38bacfdf1a337459f332974bb2327a31aaf4b
-    #- name: Grant execute permission for gradlew
-    #  run: chmod +x gradlew
-    #  working-directory: LibraryService-Backend
-    #- name: Build with Gradle
-    #  run: ./gradlew build
-    #  working-directory: LibraryService-Backend
+    - name: Grant execute permission for gradlew
+      run: chmod +x gradlew
+      working-directory: LibraryService-Backend
+    - name: Build with Gradle
+      run: ./gradlew build
+      working-directory: LibraryService-Backend
