--- a/.github/workflows/MACOSmainbuild.yml
+++ b/.github/workflows/MACOSmainbuild.yml
@@ -2,9 +2,11 @@ name: Java CI with Gradle
 
 on:
   push:
-    branches: [ master ]
+    branches: 
+      - master
   pull_request:
-    branches: [ master ]
+    branches: 
+      - master
 
 jobs:
   build:
