--- a/.github/workflows/MACOSmainbuild.yml
+++ b/.github/workflows/MACOSmainbuild.yml
@@ -29,3 +29,9 @@ jobs:
     - name: Build with Gradle
       run: ./gradlew build
       working-directory: LibraryService-Backend
+    - name: Deploy to Heroku
+      uses: akhileshns/heroku-deploy@v3.12.12
+      with: 
+        heroku_api_key: c7d5df75-cbf0-4635-96c3-bba9306175e5
+        heroku_app_name: "libraryservice-backend-g13"
+        heroku_email: "gabrielle.halpin@mail.mcgill.ca"
