--- a/.github/workflows/MACOSmainbuild.yml
+++ b/.github/workflows/MACOSmainbuild.yml
@@ -35,4 +35,6 @@ jobs:
         heroku_api_key: c7d5df75-cbf0-4635-96c3-bba9306175e5
         heroku_app_name: "libraryservice-backend-g13"
         heroku_email: "gabrielle.halpin@mail.mcgill.ca"
-    - run: git push backend-heroku main
+        justlogin: true
+    - name: "Push to Heroku"
+      run: git push backend-heroku master
