--- a/.github/workflows/MACOSmainbuild.yml
+++ b/.github/workflows/MACOSmainbuild.yml
@@ -36,6 +36,8 @@ jobs:
         heroku_app_name: "libraryservice-backend-g13"
         heroku_email: "gabrielle.halpin@mail.mcgill.ca"
         justlogin: true
+    - name: Install Heroku Cli
+      run: curl https://cli-assets.heroku.com/install.sh | sh
     - name: "set git remote"
       run: heroku git:remote --app libraryservice-backend-g13 --remote backend-heroku
     - name: "Push to Heroku"
