--- a/.github/workflows/MACOSmainbuild.yml
+++ b/.github/workflows/MACOSmainbuild.yml
@@ -29,25 +29,19 @@ jobs:
     - name: Build with Gradle
       run: ./gradlew build
       working-directory: LibraryService-Backend
-    - name: Deploy to Heroku
-      uses: akhileshns/heroku-deploy@v3.12.12
-      with: 
+  
+  deploy:
+    needs: build
+    runs-on: macos-latest
+    steps:
+    - uses: actions/checkout@v2
+    - uses: akhileshns/heroku-deploy@v3.12.12
+      with:
         heroku_api_key: c7d5df75-cbf0-4635-96c3-bba9306175e5
         heroku_app_name: "libraryservice-backend-g13"
         heroku_email: "gabrielle.halpin@mail.mcgill.ca"
-        justlogin: true
-    - name: Install Heroku Cli
-      run: curl https://cli-assets.heroku.com/install.sh | sh
-      env:
-        heroku_api_key: c7d5df75-cbf0-4635-96c3-bba9306175e5
-        heroku_app_name: "libraryservice-backend-g13"
-        heroku_email: "gabrielle.halpin@mail.mcgill.ca"
-    - name: "set git remote"
-      run: heroku git:remote --app libraryservice-backend-g13 --remote backend-heroku && git push backend-heroku master
-      env:
-        heroku_api_key: c7d5df75-cbf0-4635-96c3-bba9306175e5
-        heroku_app_name: "libraryservice-backend-g13"
-        heroku_email: "gabrielle.halpin@mail.mcgill.ca"
+  
+  
   integrationTests:
 
     needs: build
