--- a/.github/workflows/MACOSmainbuild.yml
+++ b/.github/workflows/MACOSmainbuild.yml
@@ -32,7 +32,7 @@ jobs:
   
   deploy:
     needs: build
-    runs-on: macos-latest
+    runs-on: ubuntu-18.0.4
     steps:
     - uses: actions/checkout@v2
     - uses: akhileshns/heroku-deploy@v3.12.12
