--- a/.github/workflows/MACOSmainbuild.yml
+++ b/.github/workflows/MACOSmainbuild.yml
@@ -11,7 +11,7 @@ on:
 jobs:
   build:
 
-    runs-on: ubuntu-18.0.4
+    runs-on: macos-latest
 
     steps:
     - uses: actions/checkout@v2
@@ -32,7 +32,7 @@ jobs:
   
   deploy:
     needs: build
-    runs-on: ubuntu-18.0.4
+    runs-on: macos-latest
     steps:
     - uses: actions/checkout@v2
     - uses: akhileshns/heroku-deploy@v3.12.12
@@ -45,7 +45,7 @@ jobs:
   integrationTests:
 
     needs: build
-    runs-on: ubuntu-18.0.4
+    runs-on: macos-latest
     steps:
     - uses: actions/checkout@v2
     - name: Run Postman tests woith Newman
