--- a/.github/workflows/MACOSmainbuild.yml
+++ b/.github/workflows/MACOSmainbuild.yml
@@ -3,10 +3,10 @@ name: Java CI with Gradle
 on:
   push:
     branches: 
-      - master
+      - develop
   pull_request:
     branches: 
-      - master
+      - develop
 
 jobs:
   build:
@@ -30,16 +30,16 @@ jobs:
       run: ./gradlew build
       working-directory: LibraryService-Backend
   
-  deploy:
-    needs: build
-    runs-on: macos-latest
-    steps:
-    - uses: actions/checkout@v2
-    - uses: akhileshns/heroku-deploy@v3.12.12
-      with:
-        heroku_api_key: c7d5df75-cbf0-4635-96c3-bba9306175e5
-        heroku_app_name: "libraryservice-backend-g13"
-        heroku_email: "gabrielle.halpin@mail.mcgill.ca"
+#   deploy:
+#     needs: build
+#     runs-on: macos-latest
+#     steps:
+#     - uses: actions/checkout@v2
+#     - uses: akhileshns/heroku-deploy@v3.12.12
+#       with:
+#         heroku_api_key: c7d5df75-cbf0-4635-96c3-bba9306175e5
+#         heroku_app_name: "libraryservice-backend-g13"
+#         heroku_email: "gabrielle.halpin@mail.mcgill.ca"
   
   
   integrationTests:
