--- a/LibraryService-Frontend/package.json
+++ b/LibraryService-Frontend/package.json
@@ -14,8 +14,8 @@
   },
   "dependencies": {
     "axios": "^0.24.0",
-    "bootstrap": "^4.0.0-beta.2",
-    "bootstrap-vue": "latest",
+    "bootstrap": "^4.6.1",
+    "bootstrap-vue": "^2.21.2",
     "jquery": "^3.6.0",
     "popper.js": "^1.12.9",
     "vue": "^2.5.2",
