--- a/.github/workflows/MACOSmainbuild.yml
+++ b/.github/workflows/MACOSmainbuild.yml
@@ -35,10 +35,11 @@ jobs:
     runs-on: macos-latest
     steps:
     - uses: actions/checkout@v2
-    - name: Add Heroku remote
-      run: heroku git:remote --libraryservice-backend-g13
-    - name: Push to Heroku
-      run: git push backend-heroku master
+    - uses: akhileshns/heroku-deploy@v3.12.12
+      with:
+        heroku_api_key: 6a5c0620-a1f0-42ee-bee7-40ba632aef4d
+        heroku_app_name: "libraryservice-backend-g13"
+        heroku_email: "gabrielle.halpin@mail.mcgill.ca"
      
   
   
