--- a/.github/workflows/MACOSmainbuild.yml
+++ b/.github/workflows/MACOSmainbuild.yml
@@ -38,8 +38,8 @@ jobs:
     - uses: akhileshns/heroku-deploy@v3.12.12
       with:
         heroku_api_key: 6a5c0620-a1f0-42ee-bee7-40ba632aef4d
-        heroku_app_name: "libraryservice-backend-g13"
-        heroku_email: "gabrielle.halpin@mail.mcgill.ca"
+        heroku_app_name: libraryservice-backend-g13
+        heroku_email: gabrielle.halpin@mail.mcgill.ca
      
   
   
