--- a/.github/workflows/MACOSmainbuild.yml
+++ b/.github/workflows/MACOSmainbuild.yml
@@ -11,7 +11,7 @@ on:
 jobs:
   build:
 
-    runs-on: macos-latest
+    runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v2
@@ -32,14 +32,14 @@ jobs:
   
   deploy:
     needs: build
-    runs-on: macos-latest
+    runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
     - uses: akhileshns/heroku-deploy@v3.12.12
       with:
         heroku_api_key: 6a5c0620-a1f0-42ee-bee7-40ba632aef4d
-        heroku_app_name: libraryservice-backend-g13
-        heroku_email: gabrielle.halpin@mail.mcgill.ca
+        heroku_app_name: "libraryservice-backend-g13"
+        heroku_email: "gabrielle.halpin@mail.mcgill.ca"
      
   
   
