--- a/.github/workflows/MACOSmainbuild.yml
+++ b/.github/workflows/MACOSmainbuild.yml
@@ -3,10 +3,10 @@ name: Java CI with Gradle
 on:
   push:
     branches: 
-      - develop
+      - master
   pull_request:
     branches: 
-      - develop
+      - master
 
 jobs:
   build:
