--- a/.github/workflows/testsDev.yml
+++ b/.github/workflows/testsDev.yml
@@ -4,10 +4,10 @@ name: Java CI with Gradle
 on:
   push:
     branches: 
-      - master
+      - develop
   pull_request:
     branches: 
-      - master
+      - develop
 
 jobs:
   build:
