--- a/.github/workflows/vueDeploy.yml
+++ b/.github/workflows/vueDeploy.yml
@@ -13,15 +13,15 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: initial Setup
-      - uses: actions/checkout@master
+        uses: actions/checkout@master
       - name: Setup Node
-      - uses: actions/setup-node@master
+        uses: actions/setup-node@master
       - name: Install npm wrapper
-      - run: npm install
+        run: npm install
       - name: Building the project
-      - run: npm run build
+        run: npm run build
       - name: setup heroku deploy
-      - uses: akhileshns/heroku-deploy@v3.12.12
+        uses: akhileshns/heroku-deploy@v3.12.12
       
         with:
           args: deploy --only hosting
