--- a/.github/workflows/vueDeploy.yml
+++ b/.github/workflows/vueDeploy.yml
@@ -17,9 +17,7 @@ jobs:
       - name: Setup Node
         uses: actions/setup-node@master
       - name: Install npm wrapper
-        run: npm install
-      - name: Go to file
-        run: cd /home/runner/work/project-group-13/project-group-13/package.json
+        run: npm ci
       - name: Building the project
         run: npm run build
       - name: setup heroku deploy
