--- a/.github/workflows/vueDeploy.yml
+++ b/.github/workflows/vueDeploy.yml
@@ -16,8 +16,10 @@ jobs:
         uses: actions/checkout@master
       - name: Setup Node
         uses: actions/setup-node@master
+      - name: go to file
+        run: cd LibraryService-Frontend/
       - name: Install npm wrapper
-        run: npm ci
+        run: npm install
       - name: Building the project
         run: npm run build
       - name: setup heroku deploy
