--- a/.github/workflows/vueDeploy.yml
+++ b/.github/workflows/vueDeploy.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Building the project
         run: npm run build
         env:
-          path: "OnlineLibrary-Frontend/**"
+          path: "LibraryService-Frontend/**"
       - name: setup heroku deploy
         uses: akhileshns/heroku-deploy@v3.12.12
         
