--- a/.github/workflows/vueDeploy.yml
+++ b/.github/workflows/vueDeploy.yml
@@ -18,6 +18,8 @@ jobs:
         uses: actions/checkout@master
       - name: Setup Node
         uses: actions/setup-node@master
+      - name: Change Directory
+        run: cd LibraryService-Frontend
       - name: Install npm wrapper
         run: npm install
       - name: Building the project
